crates/corrosion-tests/tests/snapshots/quic__connect.snap
---
source: crates/corrosion/tests/quic.rs
expression: ip.print().await
---
+----------+------+--------------------+
| endpoint | icao | json(contributors) |
+==========+======+====================+
+----------+------+--------------------+

+-----+------+---------------+
| ip  | icao | json(servers) |
+=====+======+===============+
| ::1 | YYYY | {}            |
+-----+------+---------------+
