crates/corrosion-tests/tests/snapshots/quic__disconnect.snap
---
source: crates/corrosion-tests/tests/quic.rs
expression: ip.print().await
---
+--------------------+------+--------------------+
| endpoint           | icao | json(contributors) |
+====================+======+====================+
| |1.2.3.4:2002      | YYYY | {}                 |
+--------------------+------+--------------------+
| |::f0cc:ac1a:2004  | XXXX | {}                 |
+--------------------+------+--------------------+
| game.boop.com:2005 | YYYY | {}                 |
+--------------------+------+--------------------+

+----+------+---------------+
| ip | icao | json(servers) |
+====+======+===============+
+----+------+---------------+
