crates/corrosion-tests/tests/snapshots/quic__remove_and_update.snap
---
source: crates/corrosion-tests/tests/quic.rs
expression: ip.print().await
---
+--------------------+------+--------------------+
| endpoint           | icao | json(contributors) |
+====================+======+====================+
| |1.2.3.4:2002      | YYYY | {"::1":{}}         |
+--------------------+------+--------------------+
| |::f0cc:ac1a:2004  | XXXX | {"::1":{}}         |
+--------------------+------+--------------------+
| game.boop.com:2005 | YYYY | {"::1":{}}         |
+--------------------+------+--------------------+

+-----+------+---------------------------------------------------------------------+
| ip  | icao | json(servers)                                                       |
+=====+======+=====================================================================+
| ::1 | YYYY | {"|1.2.3.4:2002":{},"|::f0cc:ac1a:2004":{},"game.boop.com:2005":{}} |
+-----+------+---------------------------------------------------------------------+
